last attempt at fixing radio spacing issue on mobile

--- a/style.css
+++ b/style.css
@@ -118,32 +118,39 @@ li
 
 .additional-fields div 
 {
-    display: block;
+    display: inline-block;
     margin-bottom: 10px;
 }
 
 .additional-fields label 
 {
-    display: inline-block;
-    margin-right: 10px;
     font-size: 1em;
 }
 
 .additional-fields input[type="radio"] 
 {
-    margin-right: 5px;
+    margin-left: 5px;
+    margin-right: 10px;
 }
 
+/* Fix the alignment for mobile */
 @media only screen and (max-width: 767px) 
 {
     .additional-fields div 
     {
-        display: block;
+        display: inline-block;
         text-align: left;
+        margin-bottom: 10px;
     }
 
     .additional-fields label 
     {
         font-size: 1.2em;
+    }
+
+    .additional-fields input[type="radio"] 
+    {
+        margin-left: 5px;
+        margin-right: 10px;
     }
 }
